# Bangg

./: .gitignore  README.md  bts.jsonc  bun-clean.mjs  package.json  turbo.json
apps/updater/: .gitignore  .vercelignore  README.md  UPGRADE_GUIDE.md  package.json  tsconfig.json  vercel.json
apps/web/: PLATE_PLUGINS_INSTALL.md  app.config.ts  index.html  package.json  vercel.json  vite.config.ts
apps/web/db/: db.ts
apps/web/db/migrations/: README.md  add_conversation_id_to_existing_tables.sql  create_chats_tables.sql  create_conversation_messages_table.sql  create_conversations_table.sql  create_message_attachments_table.sql  create_summaries_table.sql  create_transcriptions_tables.sql  create_users_and_sessions_tables.sql
apps/web/public/: HatGlasses.tsx
apps/web/scripts/: clean.js  setup-vercel.js
apps/web/src/: client.tsx  entry-client.tsx  index.css  main.tsx  routeTree.gen.ts  router.tsx  server.tsx
apps/web/src-tauri/: .gitignore  Cargo.toml  build.rs  oauth_config.json  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json  main-window.json  menu.json
apps/web/src-tauri/src/: audio_utils.rs  capture.rs  database.rs  gemini.rs  lib.rs  login.rs  realtime_transcription.rs  shortcuts.rs  system_audio_transcription.rs  transcription.rs
apps/web/src-tauri/src/speaker/: mod.rs  transcription.rs
apps/web/src/components/: ConversationBottomBar.tsx  ConversationCommand.tsx  DashedBorder.tsx  ProfileDropdown.tsx  SCREEN_CAPTURE_README.md  ScreenCaptureOverlay.tsx  TitleBar.tsx  TranscriptionPanel.tsx  header.tsx  meeting-item.tsx  meeting-list.tsx
apps/web/src/config/: shortcut.ts
apps/web/src/contexts/: AppSettingsContext.tsx  VisibilityContext.tsx
apps/web/src/hooks/: useGeminiSearch.ts  usePanelWindowResize.ts  useScreenCapture.tsx  useScreenshot.ts  useSummaryEditor.tsx  useUpdater.tsx  useUser.tsx
apps/web/src/lib/: chat-utils.ts  shortcutInterface.ts  systemAudioRecording.ts  whisper.ts
apps/web/src/polyfills/: async-local-storage.ts
apps/web/src/routes/: Login.tsx  __root.tsx  api.chat.ts  api.chatbot.ts  api.conversation-chat.ts  capture-overlay.tsx  chatbot.tsx  index.tsx  menu.tsx
apps/web/src/services/: auth.server.ts  auth.ts  chat.server.ts  chat.ts  conversation.server.ts  conversation.ts  database.ts  transcription.server.ts  transcription.ts
apps/web/src/types/: tauri.d.ts
apps/web/src/utils/: media-utils.ts
(+40 files in other folders)
