[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2.5.2"
tauri-plugin-oauth = "2.0.0"
tauri-plugin-shell = "2.3.3"
reqwest = {version = "0.12.24",  features = ["json", "blocking"] }
url = "2.5.7"
rand = "0.9.2"
tauri-plugin-store = "2.4.1"
urlencoding = "2.1.3"
sha2 = "0.10.9"
tauri-plugin-os = "2.3.2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-posthog = "0.2.4"
anyhow = "1.0.100"
once_cell = "1.21.3"
cpal = "0.16.0"
ringbuf = "0.4.8"
dotenv = "0.15.0"
futures-util = "0.3.31"
tracing = "0.1.41"
hound = "3.5.1"
tauri-plugin-keychain = "2.0.2"
tauri-plugin-machine-uid = "0.1.2"
xcap = "0.7.1"
tauri-plugin-http = "2.5.4"
tauri-plugin-updater = "2.9.0"
tauri-plugin-global-shortcut = "2.3.1"
tokio = "1.48.0"
tauri-plugin-polygon = "0.1.2"
image = "0.25.8"
screenshots = "0.8.10"
base64 = "0.22.1"
whisper-rs = "0.14.3"
dirs = "5.0"
num_cpus = "1.0"
async-channel = "2.2"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.8"



[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.19.0"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.30.1"
libpulse-simple-binding = "2.29.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.0"

[profile.dev]
opt-level = 1    # Otimização leve em dev para compilação mais rápida

# Otimizações para produção
[profile.release]
opt-level = 3
lto = true       # Link-time optimization
codegen-units = 1
strip = true    # Remove símbolos não necessários para reduzir o tamanho do binário
